// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <p
    class="Paragraph"
    data-test-id="cf-ui-paragraph"
  >
    Paragraph
  </p>
</div>
`;

exports[`renders the component h3 1`] = `
<div>
  <h3
    class="Paragraph"
    data-test-id="cf-ui-paragraph"
  >
    Paragraph
  </h3>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div>
  <p
    class="Paragraph my-extra-class"
    data-test-id="cf-ui-paragraph"
  >
    Paragraph
  </p>
</div>
`;
